# gr-fuzz

./: .gitignore  CMakeLists.txt  EXTRA.md  README.md  SETUP.md
apps/: dvbt_app1.grc  dvbt_app1.py  first_block_demo.grc  second_block_demo.grc  uhd_app1.grc  uhd_app1.py
cmake/Modules/: fuzzingConfig.cmake
examples/c++/: CMakeLists.txt  dvbt_app1.cc  first_block_demo.cc  second_block_demo.cc  uhd_app1.cc
examples/python/: first_block_demo.py  second_block_demo.py
grc/: CMakeLists.txt  fuzzing_first_block.xml  fuzzing_second_block.xml
include/fuzzing/: CMakeLists.txt  api.h  first_block.h  second_block.h
lib/: CMakeLists.txt  first_block_impl.cc  first_block_impl.h  qa_fuzzing.cc  qa_fuzzing.h  second_block_impl.cc  second_block_impl.h  test_fuzzing.cc
python/: CMakeLists.txt  __init__.py
results/fuzz-test1/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
results/fuzz-test1/queue/: id:000001,src:000000,op:flip1,pos:8,+cov  id:000002,src:000000,op:flip2,pos:1,+cov  id:000003,src:000000,op:arith8,pos:1,val:-27,+cov  id:000004,src:000000,op:arith8,pos:4,val:-14  id:000005,src:000000,op:arith8,pos:8,val:+5,+cov  id:000006,src:000000,op:int16,pos:1,val:+127,+cov  id:000007,src:000000,op:int32,pos:1,val:+16,+cov  id:000008,src:000000,op:havoc,rep:2,+cov  id:000009,src:000000,op:havoc,rep:16,+cov  id:000011,src:000000,op:havoc,rep:8  id:000012,src:000000,op:havoc,rep:128,+cov  id:000013,src:000000,op:havoc,rep:64  id:000014,src:000000,op:havoc,rep:32  id:000016,src:000000,op:havoc,rep:64  id:000017,src:000000,op:havoc,rep:64  id:000018,src:000000,op:havoc,rep:128  id:000019,src:000000,op:havoc,rep:128,+cov  id:000020,src:000000,op:havoc,rep:16,+cov  id:000021,src:000000,op:havoc,rep:64  id:000022,src:000000,op:havoc,rep:16  id:000023,src:000000,op:havoc,rep:4,+cov  id:000026,src:000000,op:havoc,rep:64,+cov  id:000027,src:000000,op:havoc,rep:4,+cov  id:000028,src:000000,op:havoc,rep:8,+cov  id:000030,src:000000,op:havoc,rep:128,+cov  id:000034,src:000000,op:havoc,rep:8,+cov  id:000035,src:000000,op:havoc,rep:2,+cov  id:000036,src:000000,op:havoc,rep:2,+cov  id:000037,src:000000,op:havoc,rep:16,+cov  id:000039,src:000000,op:havoc,rep:4,+cov  id:000040,src:000000,op:havoc,rep:64,+cov  id:000043,src:000000,op:havoc,rep:8,+cov  id:000044,src:000000,op:havoc,rep:4,+cov  id:000045,src:000000,op:havoc,rep:64,+cov  id:000048,src:000000,op:havoc,rep:128,+cov  id:000049,src:000000,op:havoc,rep:4,+cov  id:000051,src:000000,op:havoc,rep:8,+cov  id:000052,src:000000,op:havoc,rep:32,+cov  id:000053,src:000000,op:havoc,rep:128,+cov  id:000055,src:000000,op:havoc,rep:8,+cov  (+75 more)
results/fuzz-test2/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
results/fuzz-test2/crashes/: README.txt  id:000000,sig:11,src:000000,op:arith8,pos:8,val:-10  id:000001,sig:11,src:000000,op:int8,pos:0,val:+0  id:000002,sig:11,src:000000,op:int8,pos:1,val:+0  id:000003,sig:11,src:000000,op:int8,pos:2,val:+0  id:000004,sig:11,src:000000,op:int8,pos:3,val:+0  id:000005,sig:11,src:000000,op:int8,pos:4,val:+0  id:000006,sig:11,src:000000,op:int8,pos:5,val:+0  id:000007,sig:11,src:000000,op:int8,pos:6,val:+0  id:000008,sig:11,src:000000,op:int16,pos:6,val:+32  id:000009,sig:11,src:000000,op:int32,pos:4,val:+255  id:000011,sig:11,src:000000,op:havoc,rep:16  id:000012,sig:11,src:000000,op:havoc,rep:128  id:000013,sig:11,src:000000,op:havoc,rep:32  id:000014,sig:11,src:000000,op:havoc,rep:16  id:000015,sig:11,src:000000,op:havoc,rep:16  id:000016,sig:11,src:000000,op:havoc,rep:128  id:000017,sig:11,src:000000,op:havoc,rep:64  id:000018,sig:11,src:000000,op:havoc,rep:16  id:000019,sig:11,src:000000,op:havoc,rep:128  id:000021,sig:11,src:000000,op:havoc,rep:32  id:000022,sig:11,src:000000,op:havoc,rep:4  id:000023,sig:11,src:000000,op:havoc,rep:4  id:000024,sig:11,src:000000,op:havoc,rep:16  id:000025,sig:11,src:000000,op:havoc,rep:8  id:000026,sig:11,src:000000,op:havoc,rep:128  id:000027,sig:11,src:000000,op:havoc,rep:2  id:000028,sig:11,src:000000,op:havoc,rep:2  id:000029,sig:11,src:000000,op:havoc,rep:8  (+11 more)
results/fuzz-test3/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
results/fuzz-test4/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
swig/: CMakeLists.txt  fuzzing_swig.i
test_cases/dvbt_app/: ascii
(+4957 files in other folders)
